Fix backface visibility not working on Safari, need prefixes

--- a/packages/react-learn-card/src/components/FlippyCard/FlippyCard.css
+++ b/packages/react-learn-card/src/components/FlippyCard/FlippyCard.css
@@ -10,6 +10,7 @@
     position: relative;
     transition: transform 1s;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .flippy-card.is-flipped {
@@ -21,6 +22,9 @@
     height: 100%;
     width: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .card-face--front {
